fix table styling and sidebar overlapping on smaller screens

--- a/src/main/webapp/app/layouts/main/main.component.scss
+++ b/src/main/webapp/app/layouts/main/main.component.scss
@@ -25,7 +25,6 @@
     flex-direction: column;
     flex: 1 1 auto;
     overflow: auto;
-    align-items: center;
 
     .content-flex {
       display: flex;
